stack home history

--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -42,7 +42,7 @@
       <!-- Toolbar-->
       <div class="toolbar tabbar tabbar-labels toolbar-bottom toolbar-main">
         <div class="toolbar-inner">
-          <a href="#view-home" class="tab-link tab-link-active">
+          <a href="#view-home" class="tab-link link-tab-home tab-link-active">
             <i class="icon f7-icons">house</i>
             <!-- Label text -->
             <span class="tabbar-label">Home</span>
@@ -52,7 +52,7 @@
             <!-- Label text -->
             <span class="tabbar-label">Join Reseller</span>
           </a>
-          <a href="#view-keranjang" class="tab-link">
+          <a href="#view-keranjang" class="tab-link link-tab-keranjang">
             <i class="icon f7-icons">cart<span class="badge color-red cart-label" style="display: none;">0</span></i>
             <!-- Label text -->
             <span class="tabbar-label">Keranjang</span>
