add new menu reward,cek resi cek ongkir & reward

--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -47,15 +47,15 @@
             <!-- Label text -->
             <span class="tabbar-label">Home</span>
           </a>
+          <a href="#view-keranjang" class="tab-link link-tab-keranjang">
+            <i class="icon f7-icons">square_on_square</i>
+            <!-- Label text -->
+            <span class="tabbar-label">Feed</span>
+          </a>
           <a href="#view-join-reseller" class="tab-link">
             <i class="icon f7-icons">person_badge_plus_fill</i>
             <!-- Label text -->
             <span class="tabbar-label">Join Reseller</span>
-          </a>
-          <a href="#view-keranjang" class="tab-link link-tab-keranjang">
-            <i class="icon f7-icons">cart<span class="badge color-red cart-label" style="display: none;">0</span></i>
-            <!-- Label text -->
-            <span class="tabbar-label">Keranjang</span>
           </a>
           <a href="#view-inbox" class="tab-link">
             <i class="icon f7-icons">envelope_fill</i>
