--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -14,9 +14,9 @@
           <a href="#" class="link icon-only">
             <i class="icon f7-icons">search</i>
           </a>
-          <!-- <a href="#" class="link icon-only panel-open" data-panel="right">
+          <a href="#" class="link icon-only panel-open" data-panel="right">
             <i class="icon f7-icons">cart<span class="badge color-red cart-label"  >0</span></i>
-          </a> -->
+          </a>
         </div>
       </div>
     </div>
@@ -44,6 +44,20 @@
           <a href="/page/bantuan#Kontak Kami" class="col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">bubble_left_bubble_right</i>
             <span class="text-align-center">Bantuan</span>
+          </a>
+        </div>
+        <div class="row margin-top">
+          <a href="/page/bantuan#Kontak Kami" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">bubble_left_bubble_right</i>
+            <span class="text-align-center">Reward</span>
+          </a>
+          <a href="/kategori/" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">list_dash</i>
+            <span class="text-align-center">Cek resi</span>
+          </a>
+          <a href="/page/bantuan#Kontak Kami" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">bubble_left_bubble_right</i>
+            <span class="text-align-center">Cek Ongkir</span>
           </a>
         </div>
       </div>
