change position menu cart from bottom to top

--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -14,7 +14,7 @@
           <a href="#" class="link icon-only">
             <i class="icon f7-icons">search</i>
           </a>
-          <a href="#" class="link icon-only panel-open" data-panel="right">
+          <a href="/keranjang/" class="link icon-only">
             <i class="icon f7-icons">cart<span class="badge color-red cart-label"  >0</span></i>
           </a>
         </div>
