--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -48,15 +48,15 @@
         </div>
         <div class="row margin-top">
           <a href="/page/bantuan#Kontak Kami" class="col" style="display: grid;">
-            <i class="icon f7-icons" style="width: auto;">bubble_left_bubble_right</i>
+            <i class="icon f7-icons" style="width: auto;">gift</i>
             <span class="text-align-center">Reward</span>
           </a>
           <a href="/kategori/" class="col" style="display: grid;">
-            <i class="icon f7-icons" style="width: auto;">list_dash</i>
+            <i class="icon f7-icons" style="width: auto;">cube_box</i>
             <span class="text-align-center">Cek resi</span>
           </a>
           <a href="/page/bantuan#Kontak Kami" class="col" style="display: grid;">
-            <i class="icon f7-icons" style="width: auto;">bubble_left_bubble_right</i>
+            <i class="icon f7-icons" style="width: auto;">cube</i>
             <span class="text-align-center">Cek Ongkir</span>
           </a>
         </div>
