create from cek resi and cek ongkir

--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -47,12 +47,12 @@
             <!-- Label text -->
             <span class="tabbar-label">Home</span>
           </a>
-          <a href="#view-keranjang" class="tab-link link-tab-keranjang">
+          <a href="#view-feed" class="tab-link link-tab-feed">
             <i class="icon f7-icons">square_on_square</i>
             <!-- Label text -->
             <span class="tabbar-label">Feed</span>
           </a>
-          <a href="#view-join-reseller" class="tab-link">
+          <a href="/page/join-reseller#Join Reseller" class="tab-link">
             <i class="icon f7-icons">person_badge_plus_fill</i>
             <!-- Label text -->
             <span class="tabbar-label">Join Reseller</span>
@@ -74,10 +74,15 @@
         <!-- Home page will be loaded here dynamically from / route -->
       </div>
 
-      <!-- Join Reseller View -->
-      <div id="view-join-reseller" class="view view-init tab" data-name="kategori" data-url="/page/join-reseller#Join Reseller">
+      <!-- Feeds View -->
+      <div id="view-feed" class="view view-init tab" data-name="feeds" data-url="/feeds/">
         <!-- kategori page will be loaded here dynamically from /kategori/ route -->
       </div>
+
+      <!-- Join Reseller View -->
+      <!-- <div id="view-join-reseller" class="view view-init tab" data-name="kategori" data-url="/page/join-reseller#Join Reseller"> -->
+        <!-- kategori page will be loaded here dynamically from /kategori/ route -->
+      <!-- </div> -->
 
       <!-- keranjang View -->
       <div id="view-keranjang" class="view view-init tab" data-name="keranjang" data-url="/keranjang/">
