--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -47,15 +47,15 @@
           </a>
         </div>
         <div class="row margin-top">
-          <a href="/page/bantuan#Kontak Kami" class="col" style="display: grid;">
+          <a href="/page/reward#Point Reward" class="col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">gift</i>
             <span class="text-align-center">Reward</span>
           </a>
-          <a href="/kategori/" class="col" style="display: grid;">
+          <a href="/page/cek-resi#Informasi Cek Resi" class="col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">cube_box</i>
-            <span class="text-align-center">Cek resi</span>
+            <span class="text-align-center">Cek Resi</span>
           </a>
-          <a href="/page/bantuan#Kontak Kami" class="col" style="display: grid;">
+          <a href="/page/cek-ongkir#Cek Ongkos Kirim" class="col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">cube</i>
             <span class="text-align-center">Cek Ongkir</span>
           </a>
