add new menu penawaran khusus

--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -41,9 +41,9 @@
             <i class="icon f7-icons" style="width: auto;">list_dash</i>
             <span class="text-align-center">Kategori</span>
           </a>
-          <a href="/page/bantuan#Kontak Kami" class="col" style="display: grid;">
+          <a href="/page/penawaran-khusus#Penawaran Khusus" class="col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">bubble_left_bubble_right</i>
-            <span class="text-align-center">Bantuan</span>
+            <span class="text-align-center">Penawaran Khusus</span>
           </a>
         </div>
         <div class="row margin-top">
