--- a/src/pages/static-page.f7.html
+++ b/src/pages/static-page.f7.html
@@ -247,15 +247,22 @@
                     <p>informasi point reward</p>
                   </div>
                 </div>
+              </div>
+              <div id="listCouriers"></div>
+              <div class="row text-align-center">
+                <div class="col-100">
+                  <div class="preloader" style="display:none"></div>
+                </div>
               </div>             
             `);
+
             var autocompleteDropdownExpand = app.autocomplete.create({
               inputEl: '#autocomplete-dropdown-expand',
               openIn: 'dropdown',
               typeahead: true,
               /* If we set valueProperty to "id" then input value on select will be set according to this property */
               // valueProperty: 'id', //object's "value" property name
-              // textProperty: 'id', //object's "text" property name
+              // textProperty: 'name', //object's "text" property name
               // limit: 20, //limit to 20 results
               // expandInput: true, // expand input
               source: function (query, render) {
@@ -264,7 +271,7 @@
                   render(results);
                   return;
                 }
-                console.log('query',query)
+
                 app.request({
                   url: 'static/cities.json',
                   method: 'GET',
@@ -285,20 +292,68 @@
                     render(results);
                   }
                 });
-              }
+              },
+              // on: {
+                // change: function (value) {
+                  // console.log(value)
+                  // Add item text value to item-after
+                  // $$('#autocomplete-standalone-multiple').find('.item-after').text(value.join(', '));
+                  // Add item value to input value
+                  // $$('#autocomplete-standalone-multiple').find('input').val(value.join(', '));
+                // }
+              // }
             });
 
             $$('#formCekOngkir').on('submit',function(e){
-              console.log('city',document.getElementById("autocomplete-dropdown-expand").value)
-              console.log('weight',document.getElementById("inputWeight").value)
-            })
-            // $$('#formCekOngkir').on('formajax:success', function (e) {
-              // console.log(e)
-              // var xhr = e.detail.xhr; // actual XHR object
+              let getInput = {
+                "city" : document.getElementById("autocomplete-dropdown-expand").value,
+                "weight" : document.getElementById("inputWeight").value,
+              };
+              app.request({
+                url: 'static/cities.json',
+                method: 'GET',
+                dataType: 'json',
+                //send "query" to server. Useful in case you generate response dynamically
+                // data: {
+                //   query: getInput
+                // },
+                success: function (data) {
+                  let results = [];
+                  // console.log(data)
+                  // Find matched items
+                  for (var i = 0; i < data.length; i++) {
+                    // console.log(data[i].city_name.toLowerCase())
+                    if (data[i].city_name.toLowerCase().indexOf(getInput.city.toLowerCase()) >= 0) results.push(data[i]);
+                  }
 
-              // var data = e.detail.data; // Ajax response from action file
-              // do something with response data
-            // });
+                  pageContent.find('#listCouriers').html('');
+                  results.forEach(function(item,index) {
+                    app.preloader.show();
+                    app.request.getJSON(`https://m.anakhebatindonesia.com/ongkir/cost-all?destination=${item.city_id}&weight=${getInput.weight}`, function (cost) {
+                      let listCouriersByCity = [];
+                      cost.forEach(function(itemCost,indexCost){
+                        let title = `${itemCost.code} ${itemCost.service} (${itemCost.etd}) - IDR ${itemCost.value}`;
+                        listCouriersByCity.push(`<li title="${title}"><div class="item-content"><div class="item-inner"><div class="item-title">${title} </div></div></div></li>`);
+                      })
+                      listCouriersByCity = listCouriersByCity.join('');
+                      let listCouriersByCityHTML = `
+                      <div class="list">
+                        <div class="list-group">
+                          <ul>
+                            <li class="list-group-title">Hasil pengecekan ke <b class="padding-horizontal-half">${item.city_name}</b> @ <b class="padding-horizontal-half">${getInput.weight}</b> Gram</li>
+                            ${listCouriersByCity}
+                          </ul>
+                        </div>
+                      </div>`;
+                      pageContent.find('#listCouriers').append(listCouriersByCityHTML);
+                      app.preloader.hide();
+                    })
+                  })
+                }
+              });
+
+            });
+
             break;
           case 'penawaran-khusus':
           // app.preloader.show();
