fix :: switch tab 'English' pada halaman join reseller

--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -52,7 +52,7 @@
             <!-- Label text -->
             <span class="tabbar-label">Feed</span>
           </a>
-          <a href="/page/join-reseller#Join Reseller" class="tab-link">
+          <a href="#view-join-reseller" class="tab-link">
             <i class="icon f7-icons">person_badge_plus_fill</i>
             <!-- Label text -->
             <span class="tabbar-label">Join Reseller</span>
@@ -80,9 +80,9 @@
       </div>
 
       <!-- Join Reseller View -->
-      <!-- <div id="view-join-reseller" class="view view-init tab" data-name="kategori" data-url="/page/join-reseller#Join Reseller"> -->
+      <div id="view-join-reseller" class="view view-init tab" data-name="join-reseller" data-url="/join-reseller/">
         <!-- kategori page will be loaded here dynamically from /kategori/ route -->
-      <!-- </div> -->
+      </div>
 
       <!-- keranjang View -->
       <div id="view-keranjang" class="view view-init tab" data-name="keranjang" data-url="/keranjang/">
