fix :: proses ambil postingan dari instagram

--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -485,7 +485,7 @@
         // console.log('PAGE BEFORE IN',page);
         this.labelCartToolbarBottom();
         this.toolbarBottomShow();
-        this.refreshPage(page);
+        // this.refreshPage(page);
       },
       pageAfterIn: function(e, page) {
         // console.log('PAGE AFTER IN',page);
