tambah icon pada halaman instagram feed dan join reseller

--- a/src/pages/feeds.f7.html
+++ b/src/pages/feeds.f7.html
@@ -3,6 +3,11 @@
   <div class="navbar">
     <div class="navbar-bg"></div>
     <div class="navbar-inner sliding">
+      <div class="left">
+        <a href="#">
+          <img class="padding-left" src="static/icons/icon.png" alt="">
+        </a>
+      </div>
       <div class="title">Instagram Feeds</div>
       <div class="right">
         <a href="/keranjang/" class="link icon-only tab-link">
