--- a/src/pages/static-page-join-reseller.f7.html
+++ b/src/pages/static-page-join-reseller.f7.html
@@ -9,6 +9,11 @@
             <span class="if-not-md">Back</span>
           </a>
         </div> -->
+        <div class="left">
+          <a href="#">
+            <img class="padding-left" src="static/icons/icon.png" alt="">
+          </a>
+        </div>
         <div class="title">Join Reseller</div>
         <div class="right">
           <a href="/keranjang/" class="link icon-only">
